// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Input / Text Actions Story 1`] = `
Array [
  <p>
    Actions are a bit laggy because of the @storybook/addon-actions. Prod performance is not affected.
  </p>,
  .c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c6:hover {
  border-color: #4B4B46;
}

.c6:focus {
  border-color: #0046FF;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c5 {
  position: relative;
}

<div
    className="c0"
  >
    <label
      className="c1"
      hidden={false}
    >
      <span
        className="c2"
      >
        <div
          className="c3"
        >
          Label 
        </div>
        <span
          className="c4"
        >
          <div
            className="c5"
          >
            <input
              className="c6"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              placeholder="Placeholder"
              type="text"
            />
          </div>
        </span>
      </span>
    </label>
  </div>,
]
`;

exports[`Storyshots Molecules | Input / Text Both Addons 1`] = `
.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
  padding-left: 32px;
  padding-right: 40px;
}

.c6:hover {
  border-color: #4B4B46;
}

.c6:focus {
  border-color: #0046FF;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c5 {
  position: relative;
}

.c7 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  left: 0;
}

.c10 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <div
          className="c5"
        >
          <input
            className="c6"
            placeholder="Placeholder"
            type="text"
          />
          <div
            className="c7 c8"
            position="left"
          >
            <svg
              aria-hidden="true"
              className="c9"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              size={4}
              viewBox="0 0 24 24"
            >
              <path
                d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
                id="a"
              />
            </svg>
          </div>
          <div
            className="c10 c8"
            position="right"
          >
            SEK
          </div>
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Default Story 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c6:hover {
  border-color: #4B4B46;
}

.c6:focus {
  border-color: #0046FF;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c5 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <div
          className="c5"
        >
          <input
            className="c6"
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Disabled Addon 1`] = `
.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #EBEBE8;
  padding-left: 32px;
  padding-right: 40px;
}

.c6:focus {
  border-color: #0046FF;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c5 {
  position: relative;
}

.c7 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  left: 0;
}

.c10 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <div
          className="c5"
        >
          <input
            className="c6"
            disabled={true}
            placeholder="Placeholder"
            type="text"
          />
          <div
            className="c7 c8"
            position="left"
          >
            <svg
              aria-hidden="true"
              className="c9"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              size={4}
              viewBox="0 0 24 24"
            >
              <path
                d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
                id="a"
              />
            </svg>
          </div>
          <div
            className="c10 c8"
            position="right"
          >
            SEK
          </div>
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Disabled Story 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #EBEBE8;
}

.c6:focus {
  border-color: #0046FF;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c5 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <div
          className="c5"
        >
          <input
            className="c6"
            disabled={true}
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Edge Cases 1`] = `
.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c3 {
  width: 200px;
  display: inline-block;
}

.c9 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c9:hover {
  border-color: #4B4B46;
}

.c9:focus {
  border-color: #0046FF;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c8 {
  position: relative;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Long values
    </div>
    <div>
      <div
        className="c3"
      >
        <label
          className="c4"
          hidden={false}
        >
          <span
            className="c5"
          >
            <div
              className="c6"
            >
              Too long label, goes into ellipsis. Consider smaller label or bigger input 
            </div>
            <span
              className="c7"
            >
              <div
                className="c8"
              >
                <input
                  className="c9"
                  placeholder="If placeholder goes too long though, it probably should be truncated into ellipsis, right?"
                  type="text"
                />
              </div>
            </span>
          </span>
        </label>
        <div>
          <span
            className="c10"
          >
            This is much neccessary info wow
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Long extraInfo
    </div>
    <div>
      <div
        className="c3"
      >
        <label
          className="c4"
          hidden={false}
        >
          <span
            className="c5"
          >
            <div
              className="c6"
            >
              Small label 
            </div>
            <span
              className="c7"
            >
              <div
                className="c8"
              >
                <input
                  className="c9"
                  placeholder=""
                  type="text"
                />
              </div>
            </span>
          </span>
        </label>
        <div>
          <span
            className="c10"
          >
            Big extra fat extraInfo that will wrap over many lines. Be careful with this pattern, use it only with small texts!
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Text Error If Empty Text 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #FF1900;
  position: relative;
  background-color: #FFFFFF;
}

.c6:hover {
  border-color: #4B4B46;
}

.c6:focus {
  border-color: #0046FF;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c5 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        My awesome text field 
      </div>
      <span
        className="c4"
      >
        <div
          className="c5"
        >
          <input
            aria-invalid={true}
            className="c6"
            onChange={[Function]}
            placeholder="This is a placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
  <div>
    <span
      className="c7"
    >
      <div
        className="c8"
      >
        Error: 
      </div>
      Something went wrong
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Text Extra Info Below 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c6:hover {
  border-color: #4B4B46;
}

.c6:focus {
  border-color: #0046FF;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c5 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <div
          className="c5"
        >
          <input
            className="c6"
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
  <div>
    <span
      className="c7"
    >
      Use wisely this space
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Text Extra Info With Error 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #FF1900;
  position: relative;
  background-color: #FFFFFF;
}

.c6:hover {
  border-color: #4B4B46;
}

.c6:focus {
  border-color: #0046FF;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c5 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        My awesome text field 
      </div>
      <span
        className="c4"
      >
        <div
          className="c5"
        >
          <input
            aria-invalid={true}
            className="c6"
            onChange={[Function]}
            placeholder="This is a placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
  <div>
    <span
      className="c7"
    >
      <div
        className="c8"
      >
        Error: 
      </div>
      Enter text
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Text Full Width Story 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:760px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Full width inputs
    </span>
  </div>,
  .c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c13 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  width: 100%;
  display: inline-block;
}

.c9 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c9:hover {
  border-color: #4B4B46;
}

.c9:focus {
  border-color: #0046FF;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c10 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
  padding-left: 32px;
}

.c10:hover {
  border-color: #4B4B46;
}

.c10:focus {
  border-color: #0046FF;
}

.c10::-moz-placeholder,
.c10:-ms-input-placeholder,
.c10::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c10::-moz-placeholder,
.c10:-ms-input-placeholder,
.c10::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c10::-moz-placeholder,
.c10:-ms-input-placeholder,
.c10:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c10::-moz-placeholder,
.c10:-ms-input-placeholder,
.c10::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c14 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
  padding-right: 40px;
}

.c14:hover {
  border-color: #4B4B46;
}

.c14:focus {
  border-color: #0046FF;
}

.c14::-moz-placeholder,
.c14:-ms-input-placeholder,
.c14::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c14::-moz-placeholder,
.c14:-ms-input-placeholder,
.c14::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c14::-moz-placeholder,
.c14:-ms-input-placeholder,
.c14:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c14::-moz-placeholder,
.c14:-ms-input-placeholder,
.c14::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c8 {
  position: relative;
}

.c11 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  left: 0;
}

.c15 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Default
      </div>
      <div>
        <div
          className="c3"
          width="100%"
        >
          <label
            className="c4"
            hidden={false}
          >
            <span
              className="c5"
            >
              <div
                className="c6"
              >
                Label 
              </div>
              <span
                className="c7"
              >
                <div
                  className="c8"
                >
                  <input
                    className="c9"
                    placeholder="Placeholder"
                    type="text"
                  />
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Left addon
      </div>
      <div>
        <div
          className="c3"
          width="100%"
        >
          <label
            className="c4"
            hidden={false}
          >
            <span
              className="c5"
            >
              <div
                className="c6"
              >
                Label 
              </div>
              <span
                className="c7"
              >
                <div
                  className="c8"
                >
                  <input
                    className="c10"
                    placeholder="Placeholder"
                    type="text"
                  />
                  <div
                    className="c11 c12"
                    position="left"
                  >
                    <svg
                      aria-hidden="true"
                      className="c13"
                      focusable="false"
                      preserveAspectRatio="xMidYMid meet"
                      role="presentation"
                      size={4}
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
                        id="a"
                      />
                    </svg>
                  </div>
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Right addon
      </div>
      <div>
        <div
          className="c3"
          width="100%"
        >
          <label
            className="c4"
            hidden={false}
          >
            <span
              className="c5"
            >
              <div
                className="c6"
              >
                Label 
              </div>
              <span
                className="c7"
              >
                <div
                  className="c8"
                >
                  <input
                    className="c14"
                    placeholder="Placeholder"
                    type="text"
                  />
                  <div
                    className="c15 c12"
                    position="right"
                  >
                    SEK
                  </div>
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
}

<div
    className="c0"
  />,
]
`;

exports[`Storyshots Molecules | Input / Text Hidden Label 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c7:hover {
  border-color: #4B4B46;
}

.c7:focus {
  border-color: #0046FF;
}

.c7::-moz-placeholder,
.c7:-ms-input-placeholder,
.c7::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c7::-moz-placeholder,
.c7:-ms-input-placeholder,
.c7::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c7::-moz-placeholder,
.c7:-ms-input-placeholder,
.c7:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c7::-moz-placeholder,
.c7:-ms-input-placeholder,
.c7::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          Label 
        </div>
      </div>
      <span
        className="c5"
      >
        <div
          className="c6"
        >
          <input
            className="c7"
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Left Addon Story 1`] = `
.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
  padding-left: 32px;
}

.c6:hover {
  border-color: #4B4B46;
}

.c6:focus {
  border-color: #0046FF;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c5 {
  position: relative;
}

.c7 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  left: 0;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <div
          className="c5"
        >
          <input
            className="c6"
            placeholder="Placeholder"
            type="text"
          />
          <div
            className="c7 c8"
            position="left"
          >
            <svg
              aria-hidden="true"
              className="c9"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              size={4}
              viewBox="0 0 24 24"
            >
              <path
                d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
                id="a"
              />
            </svg>
          </div>
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Required Story 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:760px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Required
    </span>
  </div>,
  .c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  width: 200px;
  display: inline-block;
}

.c9 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c9:hover {
  border-color: #4B4B46;
}

.c9:focus {
  border-color: #0046FF;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c8 {
  position: relative;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Default (without star)
      </div>
      <div>
        <div
          className="c3"
        >
          <label
            className="c4"
            hidden={false}
          >
            <span
              className="c5"
            >
              <div
                className="c6"
              >
                Label 
              </div>
              <span
                className="c7"
              >
                <div
                  className="c8"
                >
                  <input
                    className="c9"
                    placeholder="Placeholder"
                    required={true}
                    type="text"
                  />
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        With star
      </div>
      <div>
        <div
          className="c3"
        >
          <label
            className="c4"
            hidden={false}
          >
            <span
              className="c5"
            >
              <div
                className="c6"
              >
                Label *
              </div>
              <span
                className="c7"
              >
                <div
                  className="c8"
                >
                  <input
                    className="c9"
                    placeholder="Placeholder"
                    required={true}
                    type="text"
                  />
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
}

<div
    className="c0"
  />,
]
`;

exports[`Storyshots Molecules | Input / Text Right Addon Story 1`] = `
.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
  padding-right: 40px;
}

.c6:hover {
  border-color: #4B4B46;
}

.c6:focus {
  border-color: #0046FF;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c5 {
  position: relative;
}

.c7 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <div
          className="c5"
        >
          <input
            className="c6"
            placeholder="Placeholder"
            type="text"
          />
          <div
            className="c7 c8"
            position="right"
          >
            SEK
          </div>
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text Simple Login Form 1`] = `
.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:not(:first-child) {
  padding-top: 16px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -8px;
  margin-right: -8px;
}

.c1 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
}

.c14 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c13 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c4 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c15 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #0046FF;
  padding: 4px 12px;
  min-height: 32px;
  color: #FFFFFF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c15,
.c15[type='button'],
.c15[type='reset'],
.c15[type='submit'] {
  -webkit-appearance: button;
}

.c15::-moz-focus-inner,
.c15[type='button']::-moz-focus-inner,
.c15[type='reset']::-moz-focus-inner,
.c15[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c15:-moz-focusring,
.c15[type='button']:-moz-focusring,
.c15[type='reset']:-moz-focusring,
.c15[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c15:hover {
  background-color: hsl(223.5,100%,45%);
}

.c15:active {
  background-color: hsl(223.5,100%,40%);
}

.c15::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c3 {
  width: 100%;
  display: inline-block;
}

.c9 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c9:hover {
  border-color: #4B4B46;
}

.c9:focus {
  border-color: #0046FF;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c11 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #FF1900;
  position: relative;
  background-color: #FFFFFF;
}

.c11:hover {
  border-color: #4B4B46;
}

.c11:focus {
  border-color: #0046FF;
}

.c11::-moz-placeholder,
.c11:-ms-input-placeholder,
.c11::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c11::-moz-placeholder,
.c11:-ms-input-placeholder,
.c11::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c11::-moz-placeholder,
.c11:-ms-input-placeholder,
.c11:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c11::-moz-placeholder,
.c11:-ms-input-placeholder,
.c11::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c8 {
  position: relative;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        width="100%"
      >
        <label
          className="c4"
          hidden={false}
        >
          <span
            className="c5"
          >
            <div
              className="c6"
            >
              Username 
            </div>
            <span
              className="c7"
            >
              <div
                className="c8"
              >
                <input
                  className="c9"
                  placeholder="Username"
                  type="text"
                />
              </div>
            </span>
          </span>
        </label>
        <div>
          <span
            className="c10"
          >
            Please provide your username (worst UX right here)
          </span>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
        width="100%"
      >
        <label
          className="c4"
          hidden={false}
        >
          <span
            className="c5"
          >
            <div
              className="c6"
            >
              Password 
            </div>
            <span
              className="c7"
            >
              <div
                className="c8"
              >
                <input
                  aria-invalid={true}
                  className="c11"
                  placeholder="Password"
                  type="text"
                />
              </div>
            </span>
          </span>
        </label>
        <div>
          <span
            className="c12"
          >
            <div
              className="c13"
            >
              Error: 
            </div>
            Simple error
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c14"
  >
    <button
      className="c15"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c16"
      >
        Login
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Text Small 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:760px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Size = "s"
    </span>
  </div>,
  .c16 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c4 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c17 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c3 {
  width: 200px;
  display: inline-block;
}

.c10 {
  width: 100%;
  display: inline-block;
}

.c9 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 32px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c9:hover {
  border-color: #4B4B46;
}

.c9:focus {
  border-color: #0046FF;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c11 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 32px;
  outline: none;
  border: 1px solid #FF1900;
  position: relative;
  background-color: #FFFFFF;
}

.c11:hover {
  border-color: #4B4B46;
}

.c11:focus {
  border-color: #0046FF;
}

.c11::-moz-placeholder,
.c11:-ms-input-placeholder,
.c11::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c11::-moz-placeholder,
.c11:-ms-input-placeholder,
.c11::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c11::-moz-placeholder,
.c11:-ms-input-placeholder,
.c11:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c11::-moz-placeholder,
.c11:-ms-input-placeholder,
.c11::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c14 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 32px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
  padding-left: 32px;
}

.c14:hover {
  border-color: #4B4B46;
}

.c14:focus {
  border-color: #0046FF;
}

.c14::-moz-placeholder,
.c14:-ms-input-placeholder,
.c14::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c14::-moz-placeholder,
.c14:-ms-input-placeholder,
.c14::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c14::-moz-placeholder,
.c14:-ms-input-placeholder,
.c14:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c14::-moz-placeholder,
.c14:-ms-input-placeholder,
.c14::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c18 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 32px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
  padding-right: 40px;
}

.c18:hover {
  border-color: #4B4B46;
}

.c18:focus {
  border-color: #0046FF;
}

.c18::-moz-placeholder,
.c18:-ms-input-placeholder,
.c18::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c18::-moz-placeholder,
.c18:-ms-input-placeholder,
.c18::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c18::-moz-placeholder,
.c18:-ms-input-placeholder,
.c18:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c18::-moz-placeholder,
.c18:-ms-input-placeholder,
.c18::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c8 {
  position: relative;
}

.c15 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  left: 0;
}

.c19 {
  width: 32px;
  top: 0;
  height: 100%;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  right: 4px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Default
      </div>
      <div>
        <div
          className="c3"
        >
          <label
            className="c4"
            hidden={false}
          >
            <span
              className="c5"
            >
              <div
                className="c6"
              >
                Label 
              </div>
              <span
                className="c7"
              >
                <div
                  className="c8"
                >
                  <input
                    className="c9"
                    placeholder="Placeholder"
                    type="text"
                  />
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Full width
      </div>
      <div>
        <div
          className="c10"
          width="100%"
        >
          <label
            className="c4"
            hidden={false}
          >
            <span
              className="c5"
            >
              <div
                className="c6"
              >
                Label 
              </div>
              <span
                className="c7"
              >
                <div
                  className="c8"
                >
                  <input
                    className="c9"
                    placeholder="Placeholder"
                    type="text"
                  />
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Error
      </div>
      <div>
        <div
          className="c3"
        >
          <label
            className="c4"
            hidden={false}
          >
            <span
              className="c5"
            >
              <div
                className="c6"
              >
                Label 
              </div>
              <span
                className="c7"
              >
                <div
                  className="c8"
                >
                  <input
                    aria-invalid={true}
                    className="c11"
                    placeholder="Placeholder"
                    type="text"
                  />
                </div>
              </span>
            </span>
          </label>
          <div>
            <span
              className="c12"
            >
              <div
                className="c13"
              >
                Error: 
              </div>
              Some error text that will wrap itself over couple of lines
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Left addon
      </div>
      <div>
        <div
          className="c3"
        >
          <label
            className="c4"
            hidden={false}
          >
            <span
              className="c5"
            >
              <div
                className="c6"
              >
                Label 
              </div>
              <span
                className="c7"
              >
                <div
                  className="c8"
                >
                  <input
                    className="c14"
                    placeholder="Placeholder"
                    type="text"
                  />
                  <div
                    className="c15 c16"
                    position="left"
                  >
                    <svg
                      aria-hidden="true"
                      className="c17"
                      focusable="false"
                      preserveAspectRatio="xMidYMid meet"
                      role="presentation"
                      size={4}
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
                        id="a"
                      />
                    </svg>
                  </div>
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        Right addon
      </div>
      <div>
        <div
          className="c3"
        >
          <label
            className="c4"
            hidden={false}
          >
            <span
              className="c5"
            >
              <div
                className="c6"
              >
                Label 
              </div>
              <span
                className="c7"
              >
                <div
                  className="c8"
                >
                  <input
                    className="c18"
                    placeholder="Placeholder"
                    type="text"
                  />
                  <div
                    className="c19 c16"
                    position="right"
                  >
                    SEK
                  </div>
                </div>
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
}

<div
    className="c0"
  />,
]
`;

exports[`Storyshots Molecules | Input / Text Success Story 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #00D200;
  position: relative;
  background-color: #FFFFFF;
}

.c6:hover {
  border-color: #4B4B46;
}

.c6:focus {
  border-color: #0046FF;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c5 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <div
          className="c5"
        >
          <input
            className="c6"
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text With Auto Focus 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c6:hover {
  border-color: #4B4B46;
}

.c6:focus {
  border-color: #0046FF;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c5 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <div
          className="c5"
        >
          <input
            autoFocus={true}
            className="c6"
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text With Default Value Uncontrolled Behaviour 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c6:hover {
  border-color: #4B4B46;
}

.c6:focus {
  border-color: #0046FF;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c5 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <div
          className="c5"
        >
          <input
            className="c6"
            defaultValue="Some predefined text"
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text With Label Addon 1`] = `
.c4 {
  padding-left: 4px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  stroke: #6E6E69;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c9 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c9:hover {
  border-color: #4B4B46;
}

.c9:focus {
  border-color: #0046FF;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c9::-moz-placeholder,
.c9:-ms-input-placeholder,
.c9::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c8 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
        <div
          className="c4"
        >
          <svg
            aria-hidden="false"
            className="c5"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="img"
            size={4}
            viewBox="0 0 24 24"
          >
            <g
              fillRule="evenodd"
              transform="translate(1 1)"
            >
              <circle
                className="c6"
                cx="11"
                cy="11"
                fill="none"
                r="11"
              />
              <path
                d="M9.4544,13.5528 L9.4544,13.3008 C9.4544,12.1584 9.4376,11.6376 11.1512,10.2432 C11.8904,9.6384 12.4784,9.2184 12.4784,8.496 C12.4784,7.8576 12.0248,7.3536 11.1176,7.3536 C10.1768,7.3536 9.656,7.9416 9.4376,8.6472 L6.9008,8.6472 C7.2368,6.3624 8.9504,5.1696 11.168,5.1696 C13.5032,5.1696 15.0992,6.4128 15.0992,8.3784 C15.0992,9.6888 14.5448,10.3776 13.0496,11.6544 C12.344,12.2424 11.84,12.6456 11.7056,13.3008 L11.6552,13.5528 L9.4544,13.5528 Z M11.9072,14.7288 L11.9072,17.4 L9.2696,17.4 L9.2696,14.7288 L11.9072,14.7288 Z"
                fillRule="nonzero"
              />
            </g>
            <title>
              Tooltip content
            </title>
          </svg>
        </div>
      </div>
      <span
        className="c7"
      >
        <div
          className="c8"
        >
          <input
            className="c9"
            placeholder="Placeholder"
            type="text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Text With Value Controlled Behaviour 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  background-color: #FFFFFF;
}

.c6:hover {
  border-color: #4B4B46;
}

.c6:focus {
  border-color: #0046FF;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-webkit-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::-moz-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6:-ms-input-placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c6::-moz-placeholder,
.c6:-ms-input-placeholder,
.c6::placeholder {
  height: inherit;
  line-height: inherit;
  color: #6E6E69;
}

.c5 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Label 
      </div>
      <span
        className="c4"
      >
        <div
          className="c5"
        >
          <input
            className="c6"
            placeholder="Placeholder"
            type="text"
            value="Some predefined text"
          />
        </div>
      </span>
    </span>
  </label>
</div>
`;
